--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-data-firebase-auth",
+  "name": "js-data-firebaseauth-angular",
   "authors": [
     "joverall22 <joverall22@gmail.com>"
   ],
